# Vocably

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config.bat  environment.yml  index.html  mkdocs.yml  pull_request_template.md  pull_request_templated.md  pylint.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  python-package.yml
Scripts/: PyPI-test-Publish.bat  config.bat  format.bat  lint.bat  pytest.bat
data_prep/: index.html
docs/: data_prep.md  index.md
scripts/: PyPI-test-Publish.bat  Pypi-Publish.bat  config.bat  install.bat  lint.bat
search/: search_index.json
src/vocably/: __init__.py  constants.py
src/vocably/Preprocessing/: text.py
src/vocably/cli/: help.txt  main.py
src/vocably/featurizer/: text.py
src/vocably/grammercheck/: Grammer_checker.py  grammerchecker.py
src/vocably/paraphraser/: __init__.py  paraphrase.py
src/vocably/preprocessing/: summarizer.py  text.py
src/vocably/spellcheck/: __init__.py  checker.py
src/vocably/summarizer/: __init__.py  summarizer.py
test/: test.py  test_grammer.py  test_paraphrase.py  test_spell_check.py  test_text_preprocessor.py  test_text_summarizer.py  test_text_vectorizer.py  text_preprocessor.py
