[metadata]
name = vocably
long_description = file: README.md
long_description_content_type = text/markdown
author = Nandhini
author_email = nandhinisiva2561@gmail.com

[isort]
include_trailing_comma = True
use_parentheses = True
line_length = 119
description-file = README.md

[flake8]
max-line-length = 119
exclude = ./docs,
    __pycache__,
    .github
    *.venv/*,
    .venv,
    .eggs
    ./src/vocably/__pycache__,
    src/vocably/vocably.egg-info
